--- a/requirements.txt
+++ b/requirements.txt
@@ -3,8 +3,10 @@ alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
 asyncpg==0.29.0
+cffi==1.17.1
 click==8.1.7
 colorama==0.4.6
+cryptography==43.0.1
 fastapi==0.114.1
 greenlet==3.1.0
 h11==0.14.0
@@ -13,9 +15,11 @@ Mako==1.3.5
 MarkupSafe==2.1.5
 psycopg==3.2.1
 psycopg-binary==3.2.1
+pycparser==2.22
 pydantic==2.9.1
 pydantic-settings==2.5.2
 pydantic_core==2.23.3
+PyJWT==2.9.0
 python-dotenv==1.0.1
 sniffio==1.3.1
 SQLAlchemy==2.0.34
