--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ alembic==1.13.2
 annotated-types==0.7.0
 anyio==4.4.0
 asyncpg==0.29.0
+bcrypt==4.2.0
 cffi==1.17.1
 click==8.1.7
 colorama==0.4.6
 cryptography==43.0.1
+dnspython==2.7.0
+email_validator==2.2.0
 fastapi==0.114.1
 greenlet==3.1.0
 h11==0.14.0
@@ -21,6 +24,7 @@ pydantic-settings==2.5.2
 pydantic_core==2.23.3
 PyJWT==2.9.0
 python-dotenv==1.0.1
+python-multipart==0.0.12
 sniffio==1.3.1
 SQLAlchemy==2.0.34
 starlette==0.38.5
