--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres:13
+    image: postgres
     environment:
       POSTGRES_DB: KodeDB
       POSTGRES_USER: KodeUser
