--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,3 @@
-# services:
-#   db:
-#     image: postgres
-#     environment:
-#       POSTGRES_DB: KodeDB
-#       POSTGRES_USER: KodeUser
-#       POSTGRES_PASSWORD: KodePassword
-#     ports:
-#       - "5432:5432"
-
-#   web:
-#     build: .
-#     volumes:
-#       - .:/app
-#     ports:
-#       - "8000:8000"
-#     depends_on:
-#       - db
-# version: '3.9'
-
 services:
   app:
     build: .
@@ -32,6 +12,9 @@ services:
       - .:/app
     command: >
       uvicorn main:app --host 0.0.0.0 --port 8000 --reload
+    networks:
+      - kode_network
+
 
   db:
     image: postgres:latest
@@ -44,6 +27,26 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - kode_network
 
+
+  pgadmin:
+    image: dpage/pgadmin4:latest
+    environment:
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: admin
+    ports:
+      - "5050:80"
+    depends_on:
+      - db
+    networks:
+      - kode_network
+
+networks:
+  kode_network:
+    driver: bridge
+
+    
 volumes:
   postgres_data:
